examples/ZenohCS/NativeMethods.cs


        /// <summary>
        ///  @return the length of the string (without terminating 0 character).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_string_len", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern nuint z_string_len(z_loaned_string_t* this_);

        /// <summary>
        ///  @return the pointer of the string data.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_string_data", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* z_string_data(z_loaned_string_t* this_);

        /// <summary>
        ///  Constructs an owned copy of a string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_string_clone", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_string_clone(z_owned_string_t* dst, z_loaned_string_t* @this);

        [DllImport(__DllName, EntryPoint = "z_string_as_slice", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_slice_t* z_string_as_slice(z_loaned_string_t* this_);

        /// <summary>
        ///  @return ``true`` if string is empty, ``false`` otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_string_is_empty", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool z_string_is_empty(z_loaned_string_t* this_);

        /// <summary>
        ///  Constructs a new empty string array.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_string_array_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_string_array_new(MaybeUninit* this_);

        /// <summary>
        ///  Constructs string array in its gravestone state.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_internal_string_array_null", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_internal_string_array_null(MaybeUninit* this_);

        /// <summary>
        ///  @return ``true`` if the string array is valid, ``false`` if it is in a gravestone state.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_internal_string_array_check", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool z_internal_string_array_check(z_owned_string_array_t* this_);

        /// <summary>
        ///  Destroys the string array, resetting it to its gravestone value.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_string_array_drop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_string_array_drop(z_moved_string_array_t* this_);

        /// <summary>
        ///  Borrows string array.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_string_array_loan", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_string_array_t* z_string_array_loan(z_owned_string_array_t* @this);

        /// <summary>
        ///  Mutably borrows string array.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_string_array_loan_mut", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_string_array_t* z_string_array_loan_mut(z_owned_string_array_t* @this);

        /// <summary>
        ///  @return number of elements in the array.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_string_array_len", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern nuint z_string_array_len(z_loaned_string_array_t* this_);

        /// <summary>
        ///  @return ``true`` if the array is empty, ``false`` otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_string_array_is_empty", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool z_string_array_is_empty(z_loaned_string_array_t* this_);

        /// <summary>
        ///  @return the value at the position of index in the string array.
        ///
        ///  Will return `NULL` if the index is out of bounds.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_string_array_get", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_string_t* z_string_array_get(z_loaned_string_array_t* @this, nuint index);

        /// <summary>
        ///  Appends specified value to the end of the string array by copying.
        ///
        ///  @return the new length of the array.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_string_array_push_by_copy", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern nuint z_string_array_push_by_copy(z_loaned_string_array_t* @this, z_loaned_string_t* value);

        /// <summary>
        ///  Appends specified value to the end of the string array by alias.
        ///
        ///  @return the new length of the array.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_string_array_push_by_alias", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern nuint z_string_array_push_by_alias(z_loaned_string_array_t* @this, z_loaned_string_t* value);

        /// <summary>
        ///  Constructs an owned copy of a string array.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_string_array_clone", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_string_array_clone(MaybeUninit* dst, z_loaned_string_array_t* this_);

        /// <summary>
        ///  Create uhlc timestamp from session id.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_timestamp_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_timestamp_new(MaybeUninit* @this, z_loaned_session_t* session);

        /// <summary>
        ///  Returns NPT64 time associated with this timestamp.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_timestamp_ntp64_time", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern ulong z_timestamp_ntp64_time(z_timestamp_t* this_);

        /// <summary>
        ///  @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
        ///  @brief Returns id associated with this timestamp.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_timestamp_id", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_id_t z_timestamp_id(z_timestamp_t* this_);

        /// <summary>
        ///  Returns the key expression of the sample.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_sample_keyexpr", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_keyexpr_t* z_sample_keyexpr(z_loaned_sample_t* this_);

        /// <summary>
        ///  Returns the encoding associated with the sample data.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_sample_encoding", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_sample_encoding(z_loaned_sample_t* this_);

        /// <summary>
        ///  Returns the sample payload data.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_sample_payload", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_bytes_t* z_sample_payload(z_loaned_sample_t* this_);

        /// <summary>
        ///  Returns the sample kind.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_sample_kind", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_sample_kind_t z_sample_kind(z_loaned_sample_t* this_);

        /// <summary>
        ///  Returns the sample timestamp.
        ///
        ///  Will return `NULL`, if sample is not associated with a timestamp.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_sample_timestamp", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_timestamp_t* z_sample_timestamp(z_loaned_sample_t* this_);

        /// <summary>
        ///  Returns sample attachment.
        ///
        ///  Returns `NULL`, if sample does not contain any attachment.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_sample_attachment", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_bytes_t* z_sample_attachment(z_loaned_sample_t* this_);

        /// <summary>
        ///  @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
        ///  @brief Returns the sample source_info.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_sample_source_info", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_source_info_t* z_sample_source_info(z_loaned_sample_t* this_);

        /// <summary>
        ///  Constructs an owned shallow copy of the sample (i.e. all modficiations applied to the copy, might be visible in the original) in provided uninitilized memory location.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_sample_clone", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_sample_clone(MaybeUninit* dst, z_loaned_sample_t* @this);

        /// <summary>
        ///  Returns sample qos priority value.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_sample_priority", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_priority_t z_sample_priority(z_loaned_sample_t* this_);

        /// <summary>
        ///  Returns whether sample qos express flag was set or not.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_sample_express", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool z_sample_express(z_loaned_sample_t* this_);

        /// <summary>
        ///  Returns sample qos congestion control value.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_sample_congestion_control", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_congestion_control_t z_sample_congestion_control(z_loaned_sample_t* this_);

        /// <summary>
        ///  @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
        ///  @brief Returns the reliability setting the sample was delivered with.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_sample_reliability", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_reliability_t z_sample_reliability(z_loaned_sample_t* this_);
